Fixed "Dark Mode" text color
Fixed issue of "Dark Mode" written in black color when being in dark mode making it invisible to see

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -154,3 +154,6 @@ body.dark-mode .navbar .navbar-nav .nav-item .nav-link:hover {
 body.dark-mode .navbar .navbar-nav .nav-item .nav-link.active {
   color: #008080; 
 }
+body.dark-mode .form-check-label {
+  color: #fff; /* Ensure this color overrides any other color settings */
+}
